objects/agf__ADM_Build__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RAG_Status_Indicator__c</fullName>
        <formula>IMAGE( 
CASE(RAG_Status__c, 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAG Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <description>RAG Status of Project</description>
        <inlineHelpText>RAG Status of Project</inlineHelpText>
        <label>RAG Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RAG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Release_Freeze__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Freeze</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Scrumforce_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Scrumforce ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Weeks_prior_to_release__c</fullName>
        <formula>IF ( NOT( ISNULL( agf__Release_Freeze__c ) ), 
CEILING( ( TODAY() - agf__Release_Freeze__c ) / 7 ),
null)</formula>
        <label>Weeks prior to release</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Build</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>